--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.3330"/>
+    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.912"/>
+    <style>._nav { display:none !important }</style>
     <style>h1.hero { font-family: 'Arial',system-ui,sans-serif }</style><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -19,7 +20,7 @@
             <h1 class="_logo"><a href="/dove">Dove</a></h1>
             <nav class="_nav">
               <div class="_layout">
-                <style>._nav { display:none !important }</style>
+                <p><code>// nav</code></p>
                 <hr class="thin border-gray-light"/>
               </div>
             </nav>
@@ -27,11 +28,13 @@
               <article class="_article _layout">
                 <h1 class="hero">🕊️ Dove is a theme development project.</h1>
                 <nav>
+                  <p>
+<a href="https://techie-joe.github.io/dove/home">Dove(md)</a><b> &bull; </b>
+<a href="/nova/site/themejs">ThemeJs</a>
+                  </p>
+                </nav>
+                <nav>
                   <ul>
-                    <li><b>Dove</b>
-<i class="_icon"><i class="itext">&bull;</i></i>
-<a href="https://techie-joe.github.io/dove/home">Home</a>
-                    </li>
                     <li><b>Core</b>
 <i class="_icon"><i class="isvg">
                           <svg viewBox="0 0 24 24">
@@ -83,8 +86,8 @@
                   </ul>
                 </nav>
                 <pre class="scrollable">source   : <a class="_no_u" href="https://github.com/techie-joe/dove" target="_edit">techie-joe/dove</a>
-version  : 0.0.2.3330
-revision : 33.3330
+version  : 0.0.2.912
+revision : 33.912
 site_url : <a class="_no_u" href="/dove">/dove</a>
 home_url : <a class="_no_u" href="/dove">/dove</a>
 ghost                : bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
@@ -94,9 +97,7 @@ cloudflare_analytics : (undefined)</pre>
             </main>
             <footer class="_footer">
               <div class="_layout footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
-                <p><small class="mono">// by Techie Joe 2025</small></p>
-                <p>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/index.html.pug" target="_edit">Improve this page</a>.
-                </p>
+                <p><small>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/index.html.pug" target="_edit">Improve this page</a>.</small></p>
               </div>
             </footer>
           </div>
@@ -110,14 +111,12 @@ cloudflare_analytics : (undefined)</pre>
                   </svg></i></i></a></div>
         </div>
       </div>
-      <div class="_view">
-        <div class="_layout _1020"><!-- custom-body -->
-          <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
-          </div>
-          <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-          <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3330"></script>
-        </div>
-      </div>
+    </div><!-- custom-body -->
+    <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span>
     </div>
+    <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
+    </div>
+    <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.912"></script>
   </body>
 </html>
