--- a/mallet/404.html
+++ b/mallet/404.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.3331"/>
-    <link id="_style_mallet" rel="stylesheet" href="/dove/assets/mallet/css/style.css?v=0.0.2.3331"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.913"/>
+    <link id="_style_mallet" rel="stylesheet" href="/dove/assets/mallet/css/style.css?v=0.0.2.913"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -46,7 +46,7 @@
         </nav>
         <main class="_main">
           <article class="_article _layoutx _960">
-            <div class="flex">
+            <div class="flex" style="margin:1rem auto 3rem auto">
               <div class="fit" style="font-size:4rem;padding:.8rem;">🤷</div>
               <div class="f" style="padding:0 1rem">
                 <h2>Oops! Nothing found</h2>
@@ -62,16 +62,17 @@
         </main>
         <footer class="_footer">
           <div class="_layoutx _960">
-            <p><small class="mono">// by Techie Joe 2025</small></p>
-            <p>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/mallet/404.html.pug" target="_edit">Improve this page</a>.
-            </p>
+            <p><code>// footer</code></p>
+            <p><small>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/mallet/404.html.pug" target="_edit">Improve this page</a>.</small></p>
           </div>
         </footer>
       </div>
     </div><!-- custom-body -->
+    <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span>
+    </div>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3331"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.913"></script>
   </body>
 </html>
