--- a/mallet/preview.html
+++ b/mallet/preview.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.3331"/>
-    <link id="_style_mallet" rel="stylesheet" href="/dove/assets/mallet/css/style.css?v=0.0.2.3331"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.913"/>
+    <link id="_style_mallet" rel="stylesheet" href="/dove/assets/mallet/css/style.css?v=0.0.2.913"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -49,7 +49,7 @@
 
 <h1>Heading 1</h1>
 
-<p><img src="https://techie-joe.github.io/core/images/299-400x300.jpg" alt="Featured image" class="float-right ml mb" width="400" height="300" /></p>
+<p><img src="/core/images/299-400x300.jpg" alt="Featured image" class="float-right ml mb" width="400" height="300" /></p>
 
 <p class="text-justify big-first">Writing an article can be exciting when you can add few things here and there. The <code class="language-plaintext highlighter-rouge">big-first</code> class will enlarge the first letter of a paragraph. While <code class="language-plaintext highlighter-rouge">text-justify</code> neatly aligns your text to its container. To nudge the first line of a paragraph, use the <code class="language-plaintext highlighter-rouge">indent</code> class. Indentation gives a sense of order and clarity, making an article easier to read. Include images and <a href="#" onclick="event.preventDefault();">hyperlinks</a> to make things more engaging.</p>
 
@@ -103,22 +103,25 @@ or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
   </li>
 </ul>
 
-<h2>Button links</h2>
+<h2>Heading 2</h2>
 
-<p>
-<a href="#" onclick="event.preventDefault();" class="button bg-primary border-primary text-white">Primary</a>
-<a href="#" onclick="event.preventDefault();" class="button bg-secondary border-secondary text-black">Secondary</a>
-<a href="#" onclick="event.preventDefault();" class="button">Button Link</a>
-<span class="text-gray">&bull;</b>
-<a href="#" onclick="event.preventDefault();theme.change()" class="button text-secondary" title="Change Theme (Alt+T)">Change Theme</a></p>
+<p class="text-grey">Not too loud, not too small. It's like the middle child of headings: always trying, never crying. H2 organizes sections, but secretly dreams of being an H1 someday. Don't tell it the truth. Let it dream.</p>
 
-<h2>Footnote links</h2>
+<h3>Heading 3</h3>
 
-<p>A footnote<sup id="fnref:1" role="doc-noteref"><a href="#fn:1" class="footnote" rel="footnote">1</a></sup> creates a list of references at the bottom of a page.</p>
+<p class="text-grey">The Mysterious H3 is like that friend who wears sunglasses indoors. Mysterious. Cool. A bit unnecessary sometimes, but when used right — chef's kiss! H3 loves details and subtopics. But if you go too deep, suddenly you're in H6 territory, and nobody reads that far.</p>
 
-<p>Normally you would use number<sup id="fnref:2" role="doc-noteref"><a href="#fn:2" class="footnote" rel="footnote">2</a></sup> as reference.</p>
+<h4>Heading 4</h4>
 
-<p>You can also use word<sup id="fnref:note" role="doc-noteref"><a href="#fn:note" class="footnote" rel="footnote">3</a></sup> as reference.</p>
+<p class="text-grey">H4 is forgotten like socks at Christmas. Technically useful, but no one really cheers for it. You'll use it if you have to, like adding extra layers to a report nobody asked for. Poor H4. Always invited, never remembered.</p>
+
+<h6>Heading 5</h6>
+
+<p class="text-grey">H5 is that tiny notebook you bought to look organized but never actually use. It's small, it's cute, it's there — but honestly, body text is almost the same size, so why bother? H5 knows its fate but accepts it gracefully.</p>
+
+<h6>Heading 6</h6>
+
+<p class="text-grey">And then comes H6, the heading so small it whispers. Nobody notices it. Even search engines squint and go, “Wait, is that… a heading?” H6 is like writing a title with invisible ink: only the bravest readers will ever see it.</p>
 
 <h2>Code blocks</h2>
 
@@ -143,116 +146,23 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 
 <h2>Including images</h2>
 
-<p><img src="https://techie-joe.github.io/core/images/299-1024x368.jpg" alt="Large image" class="full-width centered" /></p>
+<p><img src="/core/images/299-1024x368.jpg" alt="Large image" class="full-width" /></p>
 
 <blockquote class="text-small mt-0">
   <p>Images for this demo came from <a href="https://picsum.photos/" target="_blank">picsum.photos</a>.</p>
 </blockquote>
 
-<p>Use <code class="language-plaintext highlighter-rouge">width-full.centered</code> class for full-width images.</p>
+<p>Use the <code class="language-plaintext highlighter-rouge">width-full</code> class for large images.</p>
 
-<p>Align small images with floats and margins, use <code class="language-plaintext highlighter-rouge">float-left.mr.mb</code>, <code class="language-plaintext highlighter-rouge">float-right.ml.mb</code> or <code class="language-plaintext highlighter-rouge">centered.mb</code>.</p>
+<p>For smaller images, align them using floats and margins: <code class="language-plaintext highlighter-rouge">float-left.mr.mb</code>, <code class="language-plaintext highlighter-rouge">float-right.ml.mb</code> or <code class="language-plaintext highlighter-rouge">centered.mb</code>.</p>
 
 <hr class="mb-3" />
 
-<p><img src="https://techie-joe.github.io/core/images/octocat-64x64.png" alt="Left Octocat" class="float-left mr mb pa bg-white" width="64" height="64" />
-<img src="https://techie-joe.github.io/core/images/octocat-64x64.png" alt="Right Octocat" class="float-right ml mb pa bg-white" width="64" height="64" />
-<img src="https://techie-joe.github.io/core/images/core-64x64.png" alt="Small image" class="centered mb pa bg-white" width="64" height="64" /></p>
+<p><img src="/core/images/octocat-64x64.png" alt="Left Octocat" class="float-left mr mb pa bg-white" width="64" height="64" />
+<img src="/core/images/octocat-64x64.png" alt="Right Octocat" class="float-right ml mb pa bg-white" width="64" height="64" />
+<img src="/core/images/core-64x64.png" alt="Small image" class="centered mb pa bg-white" width="64" height="64" /></p>
 
 <hr class="mt-3" />
-
-<h2>Heading 2</h2>
-
-<p class="text-grey">Not too loud, not too small. It's like the middle child of headings: always trying, never crying. H2 organizes sections, but secretly dreams of being an H1 someday. Don't tell it the truth. Let it dream.</p>
-
-<h3>Heading 3</h3>
-
-<p class="text-grey">The Mysterious H3 is like that friend who wears sunglasses indoors. Mysterious. Cool. A bit unnecessary sometimes, but when used right — chef's kiss! H3 loves details and subtopics. But if you go too deep, suddenly you're in H6 territory, and nobody reads that far.</p>
-
-<h4>Heading 4</h4>
-
-<p class="text-grey">H4 is forgotten like socks at Christmas. Technically useful, but no one really cheers for it. You'll use it if you have to, like adding extra layers to a report nobody asked for. Poor H4. Always invited, never remembered.</p>
-
-<h6>Heading 5</h6>
-
-<p class="text-grey">H5 is that tiny notebook you bought to look organized but never actually use. It's small, it's cute, it's there — but honestly, body text is almost the same size, so why bother? H5 knows its fate but accepts it gracefully.</p>
-
-<h6>Heading 6</h6>
-
-<p class="text-grey">And then comes H6, the heading so small it whispers. Nobody notices it. Even search engines squint and go, “Wait, is that… a heading?” H6 is like writing a title with invisible ink: only the bravest readers will ever see it.</p>
-
-<h2>Listing items</h2>
-
-<h3>Ordered list</h3>
-
-<ol>
-  <li>First level item.
-    <ol style="list-style:lower-alpha">
-      <li>Second level item.
-        <ol style="list-style:lower-roman">
-          <li>Third level item.</li>
-          <li>Other item.</li>
-          <li>Last item.</li>
-        </ol>
-      </li>
-      <li>Other item.</li>
-      <li>Last item.</li>
-    </ol>
-  </li>
-  <li>Other item.</li>
-  <li>Last item.</li>
-</ol>
-
-<h3>Unordered list</h3>
-
-<ul>
-  <li>First level item.
-    <ul>
-      <li>Second level item.
-        <ul>
-          <li>Third level item.</li>
-          <li>Other item.</li>
-          <li>Last item.</li>
-        </ul>
-      </li>
-      <li>Other item.</li>
-      <li>Last item.</li>
-    </ul>
-  </li>
-  <li>Other item.</li>
-  <li>Last item.</li>
-</ul>
-
-<h3>Task list</h3>
-
-<ul class="task-list">
-  <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked" />Completed task.</li>
-  <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Pending task.
-    <ul class="task-list">
-      <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked" />Second level.</li>
-      <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Second level.
-        <ul class="task-list">
-          <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked" />Third level.</li>
-          <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Other item.</li>
-          <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Last item.</li>
-        </ul>
-      </li>
-      <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Last item.</li>
-    </ul>
-  </li>
-  <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Last item.</li>
-</ul>
-
-<h2>Definition list</h2>
-
-<dl>
-<dt>Term</dt>
-<dd>Definition or description.</dd>
-<dt>CSS</dt>
-<dd>A stylesheet language for styling web pages.</dd>
-<dt>JavaScript</dt>
-<dd>A programming language that adds interactivity to websites.</dd>
-</dl>
 
 <h2>Styling blockquotes</h2>
 
@@ -296,6 +206,94 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 <p class="text-grey text-justify">This block expands like curtains on opening night, then folds back up as if nothing ever happened, gaslighting your memory of what you just saw. Authors toss long-winded explanations, secret Easter eggs, or poorly formatted cat ASCII art inside it, knowing only the brave will click. In its most chaotic form, the details block nests within itself, collapsing collapsibles within collapsibles until the reader spirals into an abyss of disclosure toggles, wondering whether the summary is summary enough to summarize the summaries.</p>
 </div>
 </details>
+
+<h2>Ordered list</h2>
+
+<ol>
+  <li>First level item.
+    <ol style="list-style:lower-alpha">
+      <li>Second level item.
+        <ol style="list-style:lower-roman">
+          <li>Third level item.</li>
+          <li>Other item.</li>
+          <li>Last item.</li>
+        </ol>
+      </li>
+      <li>Other item.</li>
+      <li>Last item.</li>
+    </ol>
+  </li>
+  <li>Other item.</li>
+  <li>Last item.</li>
+</ol>
+
+<h2>Unordered list</h2>
+
+<ul>
+  <li>First level item.
+    <ul>
+      <li>Second level item.
+        <ul>
+          <li>Third level item.</li>
+          <li>Other item.</li>
+          <li>Last item.</li>
+        </ul>
+      </li>
+      <li>Other item.</li>
+      <li>Last item.</li>
+    </ul>
+  </li>
+  <li>Other item.</li>
+  <li>Last item.</li>
+</ul>
+
+<h2>Task list</h2>
+
+<ul class="task-list">
+  <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked" />Completed task.</li>
+  <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Pending task.
+    <ul class="task-list">
+      <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked" />Second level.</li>
+      <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Second level.
+        <ul class="task-list">
+          <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked" />Third level.</li>
+          <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Other task.</li>
+          <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Last task.</li>
+        </ul>
+      </li>
+      <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Last task.</li>
+    </ul>
+  </li>
+  <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Last task.</li>
+</ul>
+
+<h2>Definition list</h2>
+
+<dl>
+<dt>Term</dt>
+<dd>Definition or description.</dd>
+<dt>CSS</dt>
+<dd>A stylesheet language for styling web pages.</dd>
+<dt>JavaScript</dt>
+<dd>A programming language that adds interactivity to websites.</dd>
+</dl>
+
+<h2>Button links</h2>
+
+<p>
+<a href="#" onclick="event.preventDefault();" class="button bg-primary border-primary text-white">Primary</a>
+<a href="#" onclick="event.preventDefault();" class="button bg-secondary border-secondary text-black">Secondary</a>
+<a href="#" onclick="event.preventDefault();" class="button">Button Link</a>
+<span class="text-gray">&bull;</b>
+<a href="#" onclick="event.preventDefault();theme.change()" class="button text-secondary" title="Change Theme (Alt+T)">Change Theme</a></p>
+
+<h2>Footnote links</h2>
+
+<p>A footnote<sup id="fnref:1" role="doc-noteref"><a href="#fn:1" class="footnote" rel="footnote">1</a></sup> creates a list of references at the bottom of a page.</p>
+
+<p>Normally you would use number as reference, you can also use word<sup id="fnref:note" role="doc-noteref"><a href="#fn:note" class="footnote" rel="footnote">2</a></sup> as reference.</p>
+
+<p>Footnote can also have multiple lines<sup id="fnref:3" role="doc-noteref"><a href="#fn:3" class="footnote" rel="footnote">3</a></sup>.</p>
 
 <h2>Table styles</h2>
 
@@ -455,16 +453,15 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 <div class="footnotes" role="doc-endnotes">
   <ol>
     <li id="fn:1" role="doc-endnote">
-      <p>A footnote reference. <a href="#fnref:1" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
-    </li>
-    <li id="fn:2" role="doc-endnote">
-
-      <p>Footnote can also have multiple lines.
-Every new line in footnote should be prefixed with 2 space or 4 space indentation. <a href="#fnref:2" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
+      <p>A typical footnote reference contains: The author's name, the article title, and publication details.<br/>
+For example: <em>John Smith</em>, <strong>Modern Web Design</strong> (New York: TechPress, 2023), page 45.<a href="#fnref:1" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
     <li id="fn:note" role="doc-endnote">
-
       <p>Named footnotes will still render with numbers instead of the text but allow easier identification and linking. <a href="#fnref:note" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
+    </li>
+    <li id="fn:3" role="doc-endnote">
+      <p>Every new line in footnote should be prefixed:<br/>
+with 2 space or 4 space indentation. <a href="#fnref:3" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
   </ol>
 </div>
@@ -472,16 +469,17 @@ Every new line in footnote should be prefixed with 2 space or 4 space indentatio
         </main>
         <footer class="_footer">
           <div class="_layoutx _960">
-            <p><small class="mono">// by Techie Joe 2025</small></p>
-            <p>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/mallet/preview.html.pug" target="_edit">Improve this page</a>.
-            </p>
+            <p><code>// footer</code></p>
+            <p><small>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/mallet/preview.html.pug" target="_edit">Improve this page</a>.</small></p>
           </div>
         </footer>
       </div>
     </div><!-- custom-body -->
+    <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span>
+    </div>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3331"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.913"></script>
   </body>
 </html>
