--- a/prime/404.html
+++ b/prime/404.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.3331"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.914"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -33,14 +33,13 @@
             </nav>
             <main class="_main">
               <article class="_article _layout">
-                <div class="flex">
+                <div class="flex" style="margin:1rem auto 3rem auto">
                   <div class="fit" style="font-size:4rem;padding:.8rem;">🤷</div>
                   <div class="f" style="padding:0 1rem">
                     <h2>Oops! Nothing found</h2>
                     <p>The content you are looking for is not here.</p>
                   </div>
                 </div>
-                <div style="margin-top:3rem"></div>
                 <hr class="thin border-gray-light"/>
                 <p><a class="button text-secondary" href="?back" onclick="event.preventDefault();(function(w){var h=w.history;w.opener?w.close():h.length&gt;1?h.back():w.location.href='/';})(window)" title="Back to previous page">👈 Back</a>
 <a class="button text-secondary" href="/dove" title="Go to Home Page">Home</a>
@@ -49,9 +48,8 @@
             </main>
             <footer class="_footer">
               <div class="_layout footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
-                <p><small class="mono">// by Techie Joe 2025</small></p>
-                <p>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/prime/404.html.pug" target="_edit">Improve this page</a>.
-                </p>
+                <p><code>// footer</code></p>
+                <p><small>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/prime/404.html.pug" target="_edit">Improve this page</a>.</small></p>
               </div>
             </footer>
           </div>
@@ -65,14 +63,12 @@
                   </svg></i></i></a></div>
         </div>
       </div>
-      <div class="_view">
-        <div class="_layout _1020"><!-- custom-body -->
-          <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
-          </div>
-          <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-          <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3331"></script>
-        </div>
-      </div>
+    </div><!-- custom-body -->
+    <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span>
     </div>
+    <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
+    </div>
+    <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.914"></script>
   </body>
 </html>
