--- a/prime/legacy.html
+++ b/prime/legacy.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.3331"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.914"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -17,8 +17,17 @@
           <div class="container-lg px-3 my-5 markdown-body">
             <h1 class="_logo"><a href="/dove">Dove</a></h1>
             <nav class="_nav">
-              <div class="_layout">
-                <style>._nav { display:none !important }</style>
+              <div class="_layout"><b>Prime</b>
+<i class="_icon"><i class="isvg">
+                    <svg viewBox="0 0 24 24">
+                      <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                    </svg></i></i>
+<a href="/dove/prime/preview.html">Preview</a>
+<a href="/dove/prime/legacy.html">Legacy</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+<a href="/dove/prime/">Home</a>
+<a href="/dove/prime/page.html">Page</a>
+<a href="/dove/prime/404.html">404</a>
                 <hr class="thin border-gray-light"/>
               </div>
             </nav>
@@ -190,9 +199,8 @@
             </main>
             <footer class="_footer">
               <div class="_layout footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
-                <p><small class="mono">// by Techie Joe 2025</small></p>
-                <p>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/prime/legacy.html.pug" target="_edit">Improve this page</a>.
-                </p>
+                <p><code>// footer</code></p>
+                <p><small>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/prime/legacy.html.pug" target="_edit">Improve this page</a>.</small></p>
               </div>
             </footer>
           </div>
@@ -206,14 +214,12 @@
                   </svg></i></i></a></div>
         </div>
       </div>
-      <div class="_view">
-        <div class="_layout _1020"><!-- custom-body -->
-          <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
-          </div>
-          <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-          <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3331"></script>
-        </div>
-      </div>
+    </div><!-- custom-body -->
+    <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span>
     </div>
+    <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
+    </div>
+    <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.914"></script>
   </body>
 </html>
