--- a/nova/legacy.html
+++ b/nova/legacy.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.913"/>
-    <link id="_style_nova" rel="stylesheet" href="/dove/assets/nova/css/nova.css?v=0.0.2.913"/>
-    <link id="_style_basic" rel="stylesheet" href="/dove/assets/nova/css/basic.css?v=0.0.2.913"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.5354"/>
+    <link id="_style_nova" rel="stylesheet" href="/dove/assets/nova/css/nova.css?v=0.0.2.5354"/>
+    <link id="_style_basic" rel="stylesheet" href="/dove/assets/nova/css/basic.css?v=0.0.2.5354"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -213,8 +213,9 @@
         </main>
         <footer class="_footer">
           <div class="_layoutx _960">
-            <p><code>// footer</code></p>
-            <p><small>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/nova/legacy.html.pug" target="_edit">Improve this page</a>.</small></p>
+            <p class="text-right text-gray"><small>
+                This site is open source.
+                <a href="https://github.com/techie-joe/dove/edit/main/_pugs/nova/legacy.html.pug" target="_edit">Improve this page</a>.</small></p>
           </div>
         </footer>
       </div>
@@ -224,6 +225,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.913"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.5354"></script>
   </body>
 </html>
