--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.5353"/>
+    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.3814"/>
     <style>._nav { display:none !important }</style>
     <style>h1.hero { font-family: 'Arial',system-ui,sans-serif }</style><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
@@ -86,8 +86,8 @@
                   </ul>
                 </nav>
                 <pre class="scrollable">source   : <a class="_no_u" href="https://github.com/techie-joe/dove" target="_edit">techie-joe/dove</a>
-version  : 0.0.2.5353
-revision : 33.5353
+version  : 0.0.2.3814
+revision : 33.3814
 site_url : <a class="_no_u" href="/dove">/dove</a>
 home_url : <a class="_no_u" href="/dove">/dove</a>
 ghost                : bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
@@ -96,10 +96,19 @@ cloudflare_analytics : (undefined)</pre>
               </article>
             </main>
             <footer class="_footer">
-              <div class="_layout footer border-top border-gray-light mt-5 pt-3">
-                <p class="text-right text-gray"><small>
-                    This site is open source.
-                    <a href="https://github.com/techie-joe/dove/edit/main/_pugs/index.html.pug" target="_edit">Improve this page</a>.</small></p>
+              <div class="_layout">
+                <div class="footer border-top border-gray-light mt-5 pt-3">
+                  <p>
+<a href="/">Techie Joe</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+<a href="/dove">Dove</a>
+                  </p>
+                </div>
+                <div class="border-top border-gray-light pt-3">
+                  <p class="text-right text-gray"><small>
+                      This site is open source.
+                      <a href="https://github.com/techie-joe/dove/edit/main/_pugs/index.html.pug" target="_edit">Improve this page</a>.</small></p>
+                </div>
               </div>
             </footer>
           </div>
@@ -119,6 +128,6 @@ cloudflare_analytics : (undefined)</pre>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.5353"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3814"></script>
   </body>
 </html>
